tests/paczka1/fuzzy1/77955401.err
Error in line 1: AwySIDMT A845 78,1
Error in line 10: e1a A833 57,5
Error in line 30: A278 A278 17,2
